[gd_scene load_steps=4 format=3 uid="uid://dplgh8qaopqml"]

[ext_resource type="Script" uid="uid://wae7u45nj3y6" path="res://Scripts/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://i3va343b8dk8" path="res://icon.svg" id="2_gntrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyqiw"]
size = Vector2(16, 24)

[node name="Player" type="CharacterBody2D"]
floor_max_angle = 1.0472
floor_snap_length = 3.0
script = ExtResource("1_kyqiw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.145, 0.203)
texture = ExtResource("2_gntrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kyqiw")

[node name="RayLeftOuter" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(0, -40)

[node name="RayLeftInner" type="RayCast2D" parent="."]
position = Vector2(-2, 0)
target_position = Vector2(0, -40)

[node name="RayRightOuter" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, -40)

[node name="RayRightInner" type="RayCast2D" parent="."]
position = Vector2(2, 0)
target_position = Vector2(0, -40)

[node name="RayRightWall" type="RayCast2D" parent="."]
position = Vector2(6, 0)
target_position = Vector2(3, 0)

[node name="RayLeftWall" type="RayCast2D" parent="."]
position = Vector2(-6, 0)
target_position = Vector2(-3, 0)

[node name="RayLeftFloor" type="RayCast2D" parent="."]
position = Vector2(4, 12)
target_position = Vector2(0, 3)

[node name="RayRightFloor" type="RayCast2D" parent="."]
position = Vector2(-5, 12)
target_position = Vector2(0, 3)
